--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.17.1",
+    "@mozilla/readability": "^0.5.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@pinecone-database/pinecone": "^3.0.1",
     "@vercel/analytics": "^1.3.1",
     "firebase": "^10.13.0",
+    "gemini-api": "^2.0.4",
+    "jsdom": "^25.0.0",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18"
